refactor: 각 계층별 데이터 이동 시 별도로 사용하도록 리팩터링